--- a/app.yaml
+++ b/app.yaml
@@ -9,9 +9,15 @@ handlers:
   static_files: favicon.ico
   upload: favicon\.ico
 
+- url: /_ah/spi/.*
+  script: api.api
+
 - url: .*
   script: main.app
 
 libraries:
 - name: webapp2
   version: "2.5.2"
+
+- name: endpoints
+  version: latest
