--- a/app.yaml
+++ b/app.yaml
@@ -15,6 +15,9 @@ handlers:
 - url: .*
   script: main.app
 
+- url: /cron/reminder
+  script: main.app
+
 libraries:
 - name: webapp2
   version: "2.5.2"
