--- a/index.yaml
+++ b/index.yaml
@@ -10,6 +10,11 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
+- kind: Game
+  properties:
+  - name: over
+  - name: modified
+
 - kind: Score
   properties:
   - name: user_name
